--- a/dot_config/HyprV/hypr/hyprland.conf
+++ b/dot_config/HyprV/hypr/hyprland.conf
@@ -17,24 +17,19 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = swww init
-exec-once = hypridle
-exec = swww img ~/.config/hypr/backgrounds/879756.png
 exec = waybar
-exec = swaync #mako
+exec-once = mako
+exec-once = blueman-applet
 exec-once = nm-applet --indicator
-#exec-once = wl-paste --watch cliphist store
-exec-once = copyq --start-server
+exec-once = wl-paste --watch cliphist store
 exec = ~/.config/HyprV/hyprv_util setbg
-exec = flameshot
-exec = playerctld daemon
-exec = xhost +SI:localuser:root
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us,ru
+    kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle, caps:super
+    kb_options =
     kb_rules =
 
     follow_mouse = 1
@@ -43,7 +38,7 @@ input {
         natural_scroll = no
     }
 
-    sensitivity = -0.15 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -53,7 +48,7 @@ general {
     gaps_out = 10
     border_size = 2
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border=rgb(553076)
+    col.active_border=rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
@@ -64,70 +59,37 @@ misc {
 }
 
 decoration {
-    rounding = 0
-    drop_shadow = true
-    shadow_range = 6
-    shadow_render_power = 5
-    shadow_ignore_window = true
-    col.shadow = rgba(1a1a1aee)
-    dim_inactive = false
-    dim_strength = 0.1
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
+    rounding = 5
+    
     blur {
-         enabled = yes
-         size = 2
-         passes = 3
-         ignore_opacity = true
-         new_optimizations = true
+        enabled = true
+        size = 7
+        passes = 4
+        new_optimizations = true
     }
+
+    blurls = lockscreen
+
+    drop_shadow = yes
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
 }
 
-#blurls = notifications
-blurls = gtk-layer-shell
-
 animations {
-    enabled = true
-    bezier = myBezier, 0.1, 0.9, 0.1, 1.05
+    enabled = yes
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    bezier = myBezier, 0.10, 0.9, 0.1, 1.05
+
+    animation = windows, 1, 7, myBezier, slide
+    animation = windowsOut, 1, 7, myBezier, slide
     animation = border, 1, 10, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
 }
-
-#decoration {
-#    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-#
-#    rounding = 5
-#    
-#    blur {
-#        enabled = true
-#        size = 7
-#        passes = 4
-#        new_optimizations = true
-#    }
-#
-#    blurls = lockscreen
-#
-#    drop_shadow = yes
-#    shadow_range = 4
-#    shadow_render_power = 3
-#    col.shadow = rgba(1a1a1aee)
-#}
-#
-#animations {
-#    enabled = yes
-#
-#    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-#    bezier = myBezier, 0.10, 0.9, 0.1, 1.05
-#
-#    animation = windows, 1, 7, myBezier, slide
-#    animation = windowsOut, 1, 7, myBezier, slide
-#    animation = border, 1, 10, default
-#    animation = fade, 1, 7, default
-#    animation = workspaces, 1, 6, default
-#}
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -147,9 +109,9 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-#device:epic mouse V1 {
-#    sensitivity = -0.5
-#}
+device:epic mouse V1 {
+    sensitivity = -0.5
+}
 
 # Example windowrule v1
 #windowrule = float, ^(kitty)$
@@ -165,76 +127,40 @@ windowrule = float, title:^(update-sys)$
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # rules below would make the specific app transparent
-windowrulev2 = opacity 0.8 0.8,title:.*
 windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
 windowrulev2 = animation popin,class:^(kitty)$,title:^(update-sys)$
 windowrulev2 = animation popin,class:^(thunar)$
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
-windowrulev2 = opacity 0.86 0.86,class:^(org.telegram.desktop)$
-windowrulev2 = opacity 0.9 0.9,class:^(firefox)$
-$pip = title:^(Firefox)$
-$pip_size = 26%
-windowrulev2 = size $pip_size $pip_size,$pip
-windowrulev2 = float,$pip
-windowrulev2 = pin,$pip
-windowrulev2 = move 100%-$pip_size 70%,$pip
+windowrulev2 = animation popin,class:^(chromium)$
+windowrulev2 = move cursor -3% -105%,class:^(wofi)$
 windowrulev2 = noanim,class:^(wofi)$
 windowrulev2 = opacity 0.8 0.6,class:^(wofi)$
-windowrulev2 = float,title:CopyQ
-windowrulev2 = float,class:efck-chat-keyboard
-#windowrulev2 = float,title:jome
-windowrulev2 = noanim,class:^(flameshot)$
-windowrulev2 = float,class:^(flameshot)$
-windowrulev2 = opacity 1 1,class:^(flameshot)$
-windowrulev2 = opacity 1 1,title:^(Media viewer)$
-windowrulev2 = opacity 1 1,title:^(Zoom Meeting)$
-windowrulev2 = opacity 1 1,title:^(Firefox)$
-#windowrulev2 = stayfocused, class:^(steam)$
-
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, U, exec, kitty  #open the terminal
-bind = $mainMod, I, killactive, # close the active window
-#bind = $mainMod, L, exec, swaylock # Lock the screen
+bind = $mainMod, Q, exec, kitty  #open the terminal
+bind = $mainMod, F4, killactive, # close the active window
+bind = $mainMod, L, exec, swaylock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
-#bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-bind = SHIFT $mainMod, R, exec, hyprctl reload
-bind = $mainMod, R, exec, thunar # Show the graphical file browser
+bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
+bind = $mainMod, E, exec, thunar # Show the graphical file browser
 bind = $mainMod, V, togglefloating, # Allow a window to float
 bind = $mainMod, SPACE, exec, wofi # Show the graphical app launcher
-bind = CTRL $mainMod, SPACE, exec, sh -c '(pkill wofi || wofi -c ~/.config/HyprV/wofi/config-lmenu)' & disown
-bind = SHIFT $mainMod, SPACE, exec, ~/efck/efck-chat-keyboard # jome -d # Show the graphical app launcher
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, O, togglesplit, # dwindle
-bind = $mainMod, S, exec, flameshot gui # take a screenshot
-#bind = ALT, V, exec, cliphist list | wofi -dme | cliphist decode | wl-copy # open clipboard manager
-#bind = ALT, V, exec, asdf=$(cliphist list | wofi -dme | cliphist decode); if [ $? -eq 0 ]; then wl-copy $asdf; fi # open clipboard manager
-bind = $mainMod, C, exec, copyq toggle
+bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
+bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # open clipboard manager
 bind = $mainMod, T, exec, ~/.config/HyprV/hyprv_util vswitch # switch HyprV version
-bind = $mainMod, D, exec, kitty --start-as=fullscreen --title btop sh -c 'btop'
-bind = $mainMod, Q, exec, playerctl previous
-bind = ALT $mainMod, W, exec, playerctl stop
-bind = $mainMod, W, exec, playerctl play-pause
-bind = $mainMod, E, exec, playerctl next
-bind = CTRL SHIFT, Q, pass, ^(firefox)$
-bind = $mainMod, F, exec, swaync-client -d # if [ "$(makoctl mode)" == "silent" ]; then makoctl mode -s default; else makoctl mode -s silent; fi; pkill -RTMIN+3 waybar
-bind = $mainMod, A, exec, swaync-client -t
-
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-
-bind = $mainMod, J, movefocus, l
-bind = $mainMod, K, movefocus, r
-
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
