Update .config/HyprV/hyprv_util Update .config/HyprV/hyprv.conf Update .config/hypr/hyprland.conf

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -18,7 +18,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = swww init
 exec-once = hypridle
-exec = swww img ~/.config/hypr/backgrounds/879756.png
+#exec = swww img ~/.config/hypr/backgrounds/879756.png
 exec = waybar
 exec = swaync #mako
 exec-once = nm-applet --indicator
