--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -18,11 +18,9 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = swww init
 exec-once = hypridle
-#exec = swww img ~/.config/hypr/backgrounds/879756.png
 exec = waybar
-exec = swaync #mako
+exec = swaync 
 exec-once = nm-applet --indicator
-#exec-once = wl-paste --watch cliphist store
 exec-once = copyq --start-server
 exec = ~/.config/HyprV/hyprv_util setbg
 exec = flameshot
@@ -137,7 +135,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    #new_is_master = true
 }
 
 gestures {
