--- a/dot_config/yazi/yazi.toml
+++ b/dot_config/yazi/yazi.toml
@@ -9,3 +9,11 @@ previewers = [
   { mime = "*/x-wine-extension-ini", run = "code" },
   { name = "*", run = "preview" },
 ]
+
+[[plugin.prepend_previewers]]
+mime = "application/{,g}zip"
+run  = "lsar"
+
+[[plugin.prepend_previewers]]
+mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}"
+run  = "lsar"
