--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -225,14 +225,20 @@ bind = $mainMod, A, exec, swaync-client -t
 
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
-bind = $mainMod, J, movefocus, l
-bind = $mainMod, K, movefocus, r
+bind = $mainMod SHIFT, h, swapwindow, l
+bind = $mainMod SHIFT, l, swapwindow, r
+bind = $mainMod SHIFT, k, swapwindow, u
+bind = $mainMod SHIFT, j, swapwindow, d
 
+bind = ALT $mainMod, h, resizeactive, -50 0
+bind = ALT $mainMod, l, resizeactive, 50 0
+bind = ALT $mainMod, k, resizeactive, 0 -50
+bind = ALT $mainMod, j, resizeactive, 0 50
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
