Update .config/HyprV/waybar/conf/v4-config.jsonc Update .config/hypr/env_var.conf Update .config/hypr/hyprland.conf Update .config/yazi/init.lua Update .config/yazi/keymap.toml Update .config/yazi/package.toml Update .config/yazi/plugins/full-border.yazi/init.lua Update .config/yazi/plugins/relative-motions.yazi/README.md Update .config/yazi/plugins/relative-motions.yazi/init.lua

--- a/dot_config/yazi/keymap.toml
+++ b/dot_config/yazi/keymap.toml
@@ -63,7 +63,7 @@ desc = "Move in relative steps"
 
 [[manager.prepend_keymap]]
 on   = [ "c", "a" ]
-run  = "plugin archive"
+run  = "plugin compress"
 desc = "Archive selected files"
 
 [[manager.prepend_keymap]]
