--- a/dot_config/hypr/env_var.conf
+++ b/dot_config/hypr/env_var.conf
@@ -20,6 +20,7 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
+env = TERMINAL,/sbin/kitty
 # Toolkit Backend Variables
 
 # GTK: Use wayland if available, fall back to x11 if not.
