--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ input {
     kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle, caps:super
+    kb_options = grp:alt_shift_toggle, shift:both_capslock
     kb_rules =
 
     follow_mouse = 1
