Update .config/HyprV/hyprv.conf Update .config/HyprV/waybar/conf/v4-config.jsonc Update .config/HyprV/wofi/config Update .config/hypr/env_var.conf Update .config/hypr/hyprland.conf Update .config/keyd/default.conf Update .config/yazi/package.toml

--- a/dot_config/HyprV/hyprv.conf
+++ b/dot_config/HyprV/hyprv.conf
@@ -7,4 +7,4 @@ SET_MESU="M"
 SET_BG="/home/quintus/.config/hypr/backgrounds/otsuka.jpg"
 
 #Set your keyboard here, use "hyprctl devices" to find the corerct device
-SET_KB="at-translated-set-2-keyboard"
+SET_KB="keyd-virtual-keyboard"
