--- a/dot_config/HyprV/waybar/conf/v4-config.jsonc
+++ b/dot_config/HyprV/waybar/conf/v4-config.jsonc
@@ -51,6 +51,7 @@
         "format": " {}",
         "format-en": "EN",
         "format-ru": "RU",
+        "keyboard-name": "keyd-virtual-keyboard",
         "on-click": "~/.config/HyprV/hyprv_util swkb",
         "signal": 8
     },
