--- a/dot_config/hypr/env_var.conf
+++ b/dot_config/hypr/env_var.conf
@@ -1,6 +1,8 @@
 # Environment Variables
 # see https://wiki.hyprland.org/Configuring/Environment-variables/ 
 
+env = EDITOR,nvim
+
 # Theming Related Variables
 # Set cursor size. See FAQ below for why you might want this variable set.
 # https://wiki.hyprland.org/FAQ/
@@ -20,7 +22,6 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
-env = TERMINAL,/sbin/kitty
 # Toolkit Backend Variables
 
 # GTK: Use wayland if available, fall back to x11 if not.
