--- a/dot_config/keyd/default.conf
+++ b/dot_config/keyd/default.conf
@@ -6,8 +6,6 @@
 
 tab = overload(control, tab)
 capslock = overload(meta, esc)
-rightshift = rightshift
-
-#esc = capslock
-#capslock = esc #overload(leftmeta, esc)
-
+leftshift+rightshift = capslock
+#[shift]
+#space = leftalt
