--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ input {
     kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle, shift:both_capslock
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -204,7 +204,7 @@ bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout windo
 bind = SHIFT $mainMod, R, exec, hyprctl reload
 bind = $mainMod, R, exec, thunar # Show the graphical file browser
 bind = $mainMod, V, togglefloating, # Allow a window to float
-bind = $mainMod, SPACE, exec, wofi # Show the graphical app launcher
+bind = $mainMod, SPACE, exec, rofi -show drun # Show the graphical app launcher
 bind = CTRL $mainMod, SPACE, exec, sh -c '(pkill wofi || wofi -c ~/.config/HyprV/wofi/config-lmenu)' & disown
 bind = SHIFT $mainMod, SPACE, exec, ~/efck/efck-chat-keyboard # jome -d # Show the graphical app launcher
 bind = $mainMod, P, pseudo, # dwindle
@@ -215,6 +215,7 @@ bind = $mainMod, S, exec, flameshot gui # take a screenshot
 bind = $mainMod, C, exec, copyq toggle
 bind = $mainMod, T, exec, ~/.config/HyprV/hyprv_util vswitch # switch HyprV version
 bind = $mainMod, D, exec, kitty --start-as=fullscreen --title btop sh -c 'btop'
+bind = $mainMod, Y, exec, kitty --title yazi sh -c 'yazi'
 bind = $mainMod, Q, exec, playerctl previous
 bind = ALT $mainMod, W, exec, playerctl stop
 bind = $mainMod, W, exec, playerctl play-pause
@@ -222,6 +223,7 @@ bind = $mainMod, E, exec, playerctl next
 bind = CTRL SHIFT, Q, pass, ^(firefox)$
 bind = $mainMod, F, exec, swaync-client -d # if [ "$(makoctl mode)" == "silent" ]; then makoctl mode -s default; else makoctl mode -s silent; fi; pkill -RTMIN+3 waybar
 bind = $mainMod, A, exec, swaync-client -t
+bind = CTRL, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
 
 
 # Move focus with mainMod + arrow keys
