Add .config/HyprV/waybar/conf/mesu.jsonc Update .config/HyprV/waybar/conf/v4-config.jsonc Update .config/hypr/hypridle.conf Add .config/yazi/plugins/chmod.yazi/DO_NOT_MODIFY_ANYTHING_IN_THIS_DIRECTORY Add .config/yazi/plugins/compress.yazi/LICENSE Add .config/yazi/plugins/compress.yazi/README.md Add .config/yazi/plugins/compress.yazi/DO_NOT_MODIFY_ANYTHING_IN_THIS_DIRECTORY Add .config/yazi/plugins/compress.yazi/init.lua Add .config/yazi/plugins/fast-enter.yazi/DO_NOT_MODIFY_ANYTHING_IN_THIS_DIRECTORY Add .config/yazi/plugins/full-border.yazi/DO_NOT_MODIFY_ANYTHING_IN_THIS_DIRECTORY Add .config/yazi/plugins/jump-to-char.yazi/DO_NOT_MODIFY_ANYTHING_IN_THIS_DIRECTORY Add .config/yazi/plugins/lsar.yazi/DO_NOT_MODIFY_ANYTHING_IN_THIS_DIRECTORY Add .config/yazi/plugins/max-preview.yazi/DO_NOT_MODIFY_ANYTHING_IN_THIS_DIRECTORY Add .config/yazi/plugins/preview.yazi/.git/branches/.keep Add .config/yazi/plugins/preview.yazi/.git/objects/info/.keep Add .config/yazi/plugins/preview.yazi/.git/objects/pack/pack-fece8a9751891ecd49a734bae9b8e5bb2a917c24.idx Add .config/yazi/plugins/preview.yazi/.git/objects/pack/pack-fece8a9751891ecd49a734bae9b8e5bb2a917c24.pack Add .config/yazi/plugins/preview.yazi/.git/objects/pack/pack-fece8a9751891ecd49a734bae9b8e5bb2a917c24.rev Add .config/yazi/plugins/preview.yazi/.git/refs/tags/.keep Add .config/yazi/plugins/relative-motions.yazi/DO_NOT_MODIFY_ANYTHING_IN_THIS_DIRECTORY

--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -6,7 +6,7 @@ general {
 
 listener {
     timeout = 300                                 # 5min
-    on-timeout = hyprctl dispatch dpms off
+    on-timeout = if [[ $(playerctl status) != "Playing" ]]; then hyprctl dispatch dpms off; fi
     on-resume = hyprctl dispatch dpms on &          # screen on when activity is detected after timeout has fired.
 }
 
