--- a/dot_config/HyprV/waybar/conf/v4-config.jsonc
+++ b/dot_config/HyprV/waybar/conf/v4-config.jsonc
@@ -26,8 +26,8 @@
         //"temperature",
         //"custom/power_profile",
         //"battery",
-        "hyprland/language",
-        "custom/myhyprv"
+        "hyprland/language"
+        //"custom/myhyprv"
 //        "custom/light_dark"
     ],
     
