/home/quintus to ~ and some more changes

--- a/dot_config/HyprV/hyprv.conf
+++ b/dot_config/HyprV/hyprv.conf
@@ -4,7 +4,7 @@
 SET_MESU="M"
 
 #Set a path to your custom background image
-SET_BG="/home/quintus/.config/hypr/backgrounds/otsuka.jpg"
+SET_BG="~/.config/hypr/backgrounds/otsuka.jpg"
 
 #Set your keyboard here, use "hyprctl devices" to find the corerct device
 SET_KB="keyd-virtual-keyboard"
