--- a/dot_config/HyprV/waybar/conf/v4-config.jsonc
+++ b/dot_config/HyprV/waybar/conf/v4-config.jsonc
@@ -25,7 +25,7 @@
         "tray",
         //"temperature",
         //"custom/power_profile",
-        //"battery",
+        "battery",
         "hyprland/language"
         //"custom/myhyprv"
 //        "custom/light_dark"
