--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -16,10 +16,11 @@ exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = swww init
+exec-once = hyprpaper
 exec-once = hypridle
 exec = waybar
 exec = swaync 
+exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = copyq --start-server
 exec = ~/.config/HyprV/hyprv_util setbg
@@ -224,6 +225,7 @@ bind = CTRL SHIFT, Q, pass, ^(firefox)$
 bind = $mainMod, F, exec, swaync-client -d # if [ "$(makoctl mode)" == "silent" ]; then makoctl mode -s default; else makoctl mode -s silent; fi; pkill -RTMIN+3 waybar
 bind = $mainMod, A, exec, swaync-client -t
 bind = CTRL, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
+bind = $mainMod, B, exec, killall -SIGUSR1 waybar 
 
 
 # Move focus with mainMod + arrow keys
