Update .config/HyprV/hyprv_util Update .config/hypr/hyprland.conf Update .config/hypr/hyprpaper.conf

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -225,7 +225,8 @@ bind = CTRL SHIFT, Q, pass, ^(firefox)$
 bind = $mainMod, F, exec, swaync-client -d # if [ "$(makoctl mode)" == "silent" ]; then makoctl mode -s default; else makoctl mode -s silent; fi; pkill -RTMIN+3 waybar
 bind = $mainMod, A, exec, swaync-client -t
 bind = CTRL, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
-bind = $mainMod, B, exec, killall -SIGUSR1 waybar 
+#bind = $mainMod, B, exec, killall -SIGUSR1 waybar 
+bind = $mainMod, B, exec, pkill waybar || ~/.config/HyprV/hyprv_util rwaybar
 
 
 # Move focus with mainMod + arrow keys
