--- a/dot_config/keyd/default.conf
+++ b/dot_config/keyd/default.conf
@@ -4,8 +4,24 @@
 
 [main]
 
-tab = overload(control, tab)
+tab = overload(vim_anywhere, tab)
 capslock = overload(meta, esc)
+space = overloadt(control, space, 300)
 leftshift+rightshift = capslock
-#[shift]
-#space = leftalt
+; = overload(meta, ;)
+#capslock+space = macro(leftalt+leftshift)
+
+[vim_anywhere]
+k = up
+j = down
+h = left
+l = right
+w = macro(leftcontrol+right)
+b = macro(leftcontrol+left)
+e = tab
+
+[meta]
+space = macro(leftalt+leftshift)
+
+[shift]
+; = :
