--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -204,8 +204,8 @@ bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout windo
 #bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = SHIFT $mainMod, R, exec, hyprctl reload
 bind = $mainMod, R, exec, thunar # Show the graphical file browser
-bind = $mainMod, V, togglefloating, # Allow a window to float
-bind = $mainMod, SPACE, exec, rofi -show drun # Show the graphical app launcher
+#bind = $mainMod, V, togglefloating, # Allow a window to float
+bind = $mainMod, V, exec, rofi -show drun # Show the graphical app launcher
 bind = CTRL $mainMod, SPACE, exec, sh -c '(pkill wofi || wofi -c ~/.config/HyprV/wofi/config-lmenu)' & disown
 bind = SHIFT $mainMod, SPACE, exec, ~/efck/efck-chat-keyboard # jome -d # Show the graphical app launcher
 bind = $mainMod, P, pseudo, # dwindle
@@ -224,8 +224,8 @@ bind = $mainMod, E, exec, playerctl next
 bind = CTRL SHIFT, Q, pass, ^(firefox)$
 bind = $mainMod, F, exec, swaync-client -d # if [ "$(makoctl mode)" == "silent" ]; then makoctl mode -s default; else makoctl mode -s silent; fi; pkill -RTMIN+3 waybar
 bind = $mainMod, A, exec, swaync-client -t
-bind = CTRL, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
-bind = $mainMod, B, exec, killall -SIGUSR1 waybar 
+bind = $mainMod, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
+bind = $mainMod, G, exec, killall -SIGUSR1 waybar 
 
 
 # Move focus with mainMod + arrow keys
