Update .config/HyprV/waybar/scripts/audio-output-switcher.sh Update .config/hypr/hypridle.conf Update .config/hypr/hyprland.conf Update .config/keyd/default.conf Update .config/nvim/lazy-lock.json Update .config/tridactyl/tridactylrc Update .config/yazi/keymap.toml

--- a/dot_config/keyd/default.conf
+++ b/dot_config/keyd/default.conf
@@ -8,8 +8,6 @@ tab = overload(vim_anywhere, tab)
 capslock = overload(meta, esc)
 space = overloadt(control, space, 300)
 leftshift+rightshift = capslock
-; = overload(meta, ;)
-#capslock+space = macro(leftalt+leftshift)
 
 [vim_anywhere]
 k = up
@@ -18,10 +16,9 @@ h = left
 l = right
 w = macro(leftcontrol+right)
 b = macro(leftcontrol+left)
+u = pageup
+d = pagedown
 e = tab
 
-[meta]
-space = macro(leftalt+leftshift)
-
-[shift]
-; = :
+#[meta]
+#space = macro(leftalt+leftshift)
