--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -1,7 +1,5 @@
 general {
-    #before_sleep_cmd = wayland-idle-inhibitor.py &
-    #after_sleep_cmd = pkill -f "wayland-idle-inhibitor.py" & hyprctl dispatch dpms on &   # to avoid having to press a key twice to turn on the display.
-    after_sleep_cmd = hyprctl dispatch dpms on & 
+    after_sleep_cmd = hyprctl dispatch dpms on & (kill $(pidof hypridle) || true) && (pidof hypridle || hypridle) 
 }
 
 listener {
@@ -12,5 +10,5 @@ listener {
 
 listener {
     timeout = 600                                # 10min
-    on-timeout = if [[ -f ~/.suspended ]]; then rm ~/.suspended; elif [[ $(playerctl status) != "Playing" ]]; then systemctl suspend; fi
+    on-timeout = if [[ $(playerctl status) != "Playing" ]]; then systemctl suspend; fi
 }
