--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprpaper
 exec-once = hypridle
+exec-once = udiskie &
 exec = waybar
 exec = swaync 
 exec-once = blueman-applet
@@ -159,6 +160,7 @@ windowrule = float,^(chromium)$
 windowrule = float,^(thunar)$
 windowrule = float, title:^(btop)$
 windowrule = float, title:^(update-sys)$
+windowrule = float, title:^(float)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
@@ -192,7 +194,6 @@ windowrulev2 = opacity 1 1,title:^(Firefox)$
 #windowrulev2 = stayfocused, class:^(steam)$
 
 
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
@@ -205,7 +206,7 @@ bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout windo
 bind = SHIFT $mainMod, R, exec, hyprctl reload
 bind = $mainMod, R, exec, thunar # Show the graphical file browser
 #bind = $mainMod, V, togglefloating, # Allow a window to float
-bind = $mainMod, V, exec, rofi -show drun # Show the graphical app launcher
+bind = $mainMod, SPACE, exec, rofi -show drun # Show the graphical app launcher
 bind = CTRL $mainMod, SPACE, exec, sh -c '(pkill wofi || wofi -c ~/.config/HyprV/wofi/config-lmenu)' & disown
 bind = SHIFT $mainMod, SPACE, exec, ~/efck/efck-chat-keyboard # jome -d # Show the graphical app launcher
 bind = $mainMod, P, pseudo, # dwindle
@@ -224,9 +225,10 @@ bind = $mainMod, E, exec, playerctl next
 bind = CTRL SHIFT, Q, pass, ^(firefox)$
 bind = $mainMod, F, exec, swaync-client -d # if [ "$(makoctl mode)" == "silent" ]; then makoctl mode -s default; else makoctl mode -s silent; fi; pkill -RTMIN+3 waybar
 bind = $mainMod, A, exec, swaync-client -t
-bind = $mainMod, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
+bind = SHIFT, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
 bind = $mainMod, G, exec, killall -SIGUSR1 waybar 
 #bind = $mainMod, B, exec, pkill waybar || ~/.config/HyprV/hyprv_util rwaybar
+bind = $mainMod, N, fullscreen
 
 
 # Move focus with mainMod + arrow keys
@@ -244,6 +246,9 @@ bind = ALT $mainMod, h, resizeactive, -50 0
 bind = ALT $mainMod, l, resizeactive, 50 0
 bind = ALT $mainMod, k, resizeactive, 0 -50
 bind = ALT $mainMod, j, resizeactive, 0 50
+
+bind = CTRL $mainMod, l, workspace, e+1
+bind = CTRL $mainMod, h, workspace, e-1
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
