--- a/dot_config/hypr/hyprpaper.conf
+++ b/dot_config/hypr/hyprpaper.conf
@@ -1,2 +1,3 @@
 preload = ~/.config/hypr/backgrounds/otsuka.jpg
+wallpaper = eDP-1,~/.config/hypr/backgrounds/otsuka.jpg
 wallpaper = DP-1,~/.config/hypr/backgrounds/otsuka.jpg
