--- a/dot_config/HyprV/waybar/conf/mesu-met.jsonc
+++ b/dot_config/HyprV/waybar/conf/mesu-met.jsonc
@@ -31,6 +31,13 @@
 	      }
     },
 
+    "custom/idle_inhibitor": {
+	"format": "{}",
+	"on-click": "~/.config/HyprV/waybar/scripts/idle_toggle.sh toggle",
+	"interval": 1,
+	"exec": "~/.config/HyprV/waybar/scripts/idle_toggle.sh",
+    },
+
     "custom/notification": {
         "tooltip": false,
         "format": "{icon}",
