--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -205,7 +205,7 @@ bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout windo
 #bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = SHIFT $mainMod, R, exec, hyprctl reload
 bind = $mainMod, R, exec, thunar # Show the graphical file browser
-#bind = $mainMod, V, togglefloating, # Allow a window to float
+bind = $mainMod, V, togglefloating, # Allow a window to float
 bind = $mainMod, SPACE, exec, rofi -show drun # Show the graphical app launcher
 bind = CTRL $mainMod, SPACE, exec, sh -c '(pkill wofi || wofi -c ~/.config/HyprV/wofi/config-lmenu)' & disown
 bind = SHIFT $mainMod, SPACE, exec, ~/efck/efck-chat-keyboard # jome -d # Show the graphical app launcher
@@ -229,6 +229,7 @@ bind = SHIFT, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
 bind = $mainMod, G, exec, killall -SIGUSR1 waybar 
 #bind = $mainMod, B, exec, pkill waybar || ~/.config/HyprV/hyprv_util rwaybar
 bind = $mainMod, N, fullscreen
+bind = $mainMod, B, exec, ~/.config/HyprV/waybar/scripts/idle_toggle.sh toggle
 
 
 # Move focus with mainMod + arrow keys
