Update .config/HyprV/waybar/conf/mesu-met.jsonc Update .config/HyprV/waybar/conf/v4-config.jsonc Update .config/hypr/hyprland.conf

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -225,11 +225,10 @@ bind = $mainMod, E, exec, playerctl next
 bind = CTRL SHIFT, Q, pass, ^(firefox)$
 bind = $mainMod, F, exec, swaync-client -d # if [ "$(makoctl mode)" == "silent" ]; then makoctl mode -s default; else makoctl mode -s silent; fi; pkill -RTMIN+3 waybar
 bind = $mainMod, A, exec, swaync-client -t
-bind = SHIFT, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
+# bind = SHIFT, SPACE, exec, hyprctl switchxkblayout keyd-virtual-keyboard next
 bind = $mainMod, G, exec, killall -SIGUSR1 waybar 
 #bind = $mainMod, B, exec, pkill waybar || ~/.config/HyprV/hyprv_util rwaybar
 bind = $mainMod, N, fullscreen
-bind = $mainMod, B, exec, ~/.config/HyprV/waybar/scripts/idle_toggle.sh toggle
 
 
 # Move focus with mainMod + arrow keys
