--- a/dot_config/HyprV/waybar/conf/v4-config.jsonc
+++ b/dot_config/HyprV/waybar/conf/v4-config.jsonc
@@ -12,8 +12,7 @@
     ],
     "modules-center": [
         "mpris",
-        //"idle_inhibitor",
-	"custom/idle_inhibitor",
+        "idle_inhibitor",
     ],
     "modules-right": [
         //"cpu",
